--- a/styles.css
+++ b/styles.css
@@ -46,3 +46,14 @@ footer {
     background-color: #4a69bd;
     color: white;
 }
+
+#noticas .contenedorpostfacebook {
+    display: flex;
+    flex-wrap: wrap;
+    gap:20px;
+    justify-content:center;
+}
+.postfacebook {
+    widh:500px;
+    height: 792px;
+}
