--- a/styles.css
+++ b/styles.css
@@ -57,3 +57,7 @@ footer {
     widh:500px;
     height: 792px;
 }
+
+.logo {
+    width: 100px; /* Ajusta el ancho según lo necesites */
+    height: auto; /* Esto mantiene la proporción de la imagen */
