--- a/styles.css
+++ b/styles.css
@@ -61,3 +61,4 @@ footer {
 .logo {
     width: 100px; /* Ajusta el ancho según lo necesites */
     height: auto; /* Esto mantiene la proporción de la imagen */
+}
