--- a/styles.css
+++ b/styles.css
@@ -59,6 +59,7 @@ footer {
 }
 
 .logo {
-    width: 10px; /* Ajusta el ancho según lo necesites */
+    transform: scale(0.5)
+    width: 100px; /* Ajusta el ancho según lo necesites */
     height: auto; /* Esto mantiene la proporción de la imagen */
 }
