--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,7 @@ footer {
 }
 
 .logo {
-    transform: scale(0.5)
+    transform: scale(0.5);
     width: 100px; /* Ajusta el ancho según lo necesites */
     height: auto; /* Esto mantiene la proporción de la imagen */
 }
