--- a/styles.css
+++ b/styles.css
@@ -60,5 +60,5 @@ footer {
 
 .logo {
     width: 1000px; /* Ajusta el ancho según lo necesites */
-    height: auto; /* Esto mantiene la proporción de la imagen */
+    height: 792px; /* Esto mantiene la proporción de la imagen */
 }
