--- a/styles.css
+++ b/styles.css
@@ -59,6 +59,6 @@ footer {
 }
 
 .logo {
-    width: 1000px; /* Ajusta el ancho según lo necesites */
-    height: 792px; /* Esto mantiene la proporción de la imagen */
+    width: 1000px; 
+    height: 792px; 
 }
