--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
 }
 
 header {
-    widht:1500xp;
+    width:1500xp;
     background-color: #3b5998;
     color: white;
     text-align: center;
